@@ -6,6 +6,8 @@
 
 	* gcc.dg/noncompile/20020220-1.c: New test.
 
+	* g++.dg/opt/ptrintsum1.C: New test.
+
 2002-02-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020216-1.c: New test.
